test/scc/pp/errors/012.a
012.t:1:3: error: stray '#' in program